Makefile: CXX=clang++

--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -1,5 +1,6 @@
 SRC			= megaphone.cpp
 NAME		= megaphone
+CXX			= clang++
 CXXFLAGS	= -Wextra -Wall -Werror -Wpedantic -g
 
 $(NAME)	: $(SRC) Makefile
