--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -6,13 +6,15 @@ NAME		=	PhoneBook
 CXX			= 	clang++
 CXXFLAGS	= 	-Wextra -Wall -Werror -Wpedantic -g -fsanitize=address
 
+all		: $(NAME)
+
+-include  $(SRC:.cpp=.d)
+
 %.o		: %.cpp Makefile
 	$(CXX) $(CXXFLAGS) -MMD -c $<
 
 $(NAME)	: $(OBJ) Makefile
 	$(CXX) $(CXXFLAGS) -o $(NAME) $(OBJ)
-
-all		: $(NAME)
 
 clean	:
 	$(RM) $(OBJ)
