--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -4,7 +4,7 @@ SRC			=	Contact.cpp		\
 OBJ			=	$(SRC:.cpp=.o)
 NAME		=	PhoneBook
 CXX			= 	clang++
-CXXFLAGS	= 	-Wextra -Wall -Werror -Wpedantic -g -fsanitize=address
+CXXFLAGS	= 	-Wextra -Wall -Werror -Wpedantic -std=c++98 -g -fsanitize=address
 
 all		: $(NAME)
 
